# DongyuanFawu

./: .env  .env.example  .env.production  .gitignore  App.tsx  README.md  index.html  openapi.json  package-lock.json  package.json  types.ts  vite-env.d.ts
.claude/: launch.json  (+1 more)
server/: CLAUDE.md  pyproject.toml  requirements.txt
server/.claude/: settings.local.json
server/app/: __init__.py  main.py
server/app/config/: __init__.py  database.py  settings.py
server/app/core/: __init__.py  auth.py  dependencies.py
server/app/db/: __init__.py  session.py
server/app/domains/: __init__.py
server/app/domains/ai_kb/: __init__.py  router.py  schemas.py  service.py
server/app/domains/auth/: __init__.py  models.py  router.py  schemas.py  service.py
server/app/domains/civil_code/: __init__.py  models.py  router.py  schemas.py  service.py
server/app/domains/collections/: __init__.py  models.py  router.py  schemas.py  service.py
server/app/domains/config/: __init__.py  models.py  router.py  schemas.py  service.py
server/app/domains/contact_qr/: __init__.py  models.py  router.py  schemas.py  service.py
server/app/domains/documents/: __init__.py  models.py  router.py  schemas.py  service.py
server/app/domains/enterprises/: __init__.py  models.py  router.py  schemas.py  service.py
server/app/domains/evidence/: __init__.py  models.py  router.py  schemas.py  service.py
server/app/domains/health_check/: __init__.py  models.py  router.py  schemas.py  service.py
server/app/domains/media/: __init__.py  service.py
server/app/utils/: __init__.py  logger.py
(+119 files in other folders)
